auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  annotations:
    argocd.argoproj.io/sync-wave: "0"
