auth/app-service-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: auth
spec:
  type: ExternalName
  externalName: app-service.default.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
